Add work experience details to index.html

--- a/index.html
+++ b/index.html
@@ -722,11 +722,20 @@ Instructions:
       <h2 class="section-title">Work Experience</h2>
       <div class="timeline">
         <div class="mb-5">
+          <h5 class="fw-semibold">Researcher, Clinical and Translational Research Unit, Santobono-Pausilipon Children’s Hospital </h5>
+          <span class="text-muted">01/12/2025 – Present | Napoli, Italy</span>
+          <span class="text-muted"> Deliberazione n. 761 prot. 23429 del 31/10/2025</span>
+          <p>Project: "Progetto PNC-E3-2022-23683269 Hub Life Science-Terapia Avanzata (HLS-TA)"</p>
+          <p>Title: Set-up delle pipeline di analisi omiche e multi-omiche per la caratterizzazione dei campioni a supporto degli studi clinici.</p>
+          <p>Codice univoco investimento: PNC-E.3 - CUP:H63C22000650001 - WBS: HPNR0004</p>
+        </div>  
+        <div class="mb-5">
           <h5 class="fw-semibold">Researcher III, Insitute of Genetics and Biofisics "Adriano Buzzati-Traverso" (IGB) - CNR </h5>
           <span class="text-muted">26/08/2024 – 25/08/2025 | Napoli, Italy</span>
           <span class="text-muted">Bando n. 400.5 IGB PNRR prot. 401541 del 15/12/2023</span>
           <p>Project: "National Centre for HPC, Big Data and Quantum Computing"</p>
           <p>Title: Development and testing of algorithms for the reconstruction of gene regulatory networks from single-cell transcriptomic data.</p>
+          <p>European Union – Next Generation EU – CN00000013 - CUP: B93C22000620006</p>
         </div>
         <div class="mb-5">
           <h5 class="fw-semibold">Visiting Postdoc, Josep Carreras Leukaemia Research Institute</h5>
@@ -736,7 +745,10 @@ Instructions:
         <div class="mb-5">
           <h5 class="fw-semibold">Postdoc, University of Campania “Luigi Vanvitelli”</h5>
           <span class="text-muted">Feb 2023 – Aug 2024 | Caserta, Italy</span>
-          <p>Profiled methylation & expression of imprinted genes in Wilms tumor using multi-omics data (EPIC, RNA-seq, Exome-seq).</p>
+          <p>D.R. n. 1018 del 21/11/2022 durata n. 36 mesi</p>
+          <p>Project: AIRC IG 2020 - ID 24405</p>
+          <p>Title: Causes and mechanisms of genomic imprinting disturbances in Beckwith-Wiedemann syndrome and Wilms Tumor</p>
+          <p></p>
         </div>
         <div>
           <h5 class="fw-semibold">Visiting Student, Babraham Institute</h5>
