--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ Instructions:
     </div>
   </section>
 
-  <!-- Experience -->
+  <!-- Work Experience -->
   <section id="experience" class="bg-light scroll-fade-in-left">
     <div class="container">
       <h2 class="section-title">Work Experience</h2>
@@ -760,14 +760,31 @@ Instructions:
   </section>
 
   <!-- Education -->
-  <section id="education" class="scroll-fade-in-right">
+  <section id="education" class="bg-light scroll-fade-in-left">
     <div class="container">
       <h2 class="section-title">Education</h2>
-      <ul class="list-unstyled">
-        <li class="mb-4"><strong>PhD in Molecular Life Sciences</strong>, University of Campania “Luigi Vanvitelli” (Nov 2019 – Jan 2023) — Focus: imprinting disorders (BWS, SRS) via RNA-seq, RRBS, BS-seq, ChIP-seq.</li>
-        <li class="mb-4"><strong>MSc in Molecular Biology</strong>, University of Campania “Luigi Vanvitelli” (2017 – 2019) — Thesis: transcription factors in imprinting control regions. 110/110 cum laude.</li>
-        <li><strong>BSc in Biological Sciences</strong>, University of Campania “Luigi Vanvitelli” (2013 – 2016) — Thesis: neuropathological effects of alcohol-induced thiamine deficiency. 110/110 cum laude.</li>
-      </ul>
+      <div class="timeline">
+        <div class="mb-5">
+          <h5 class="fw-semibold">PhD in Molecular Life Sciecies (SSD:BIO/18), Università degli Studi della Campania "Luigi Vanvitelli" </h5>
+          <span class="text-muted">01/11/2019 – 31/01/2023 | Caserta, Italy</span>
+          <span class="text-muted"> Decreto prot. n. 76400 repertorio DRR n. 478/2019</span>
+          <p>Project: "Progetto PNC-E3-2022-23683269 Hub Life Science-Terapia Avanzata (HLS-TA)"</p>
+          <p>Thesis Title: Investigating the causes of DNA methylation disturbances in Imprinting Disorders.</p>
+          <p>Evaluation: Excellent</p>
+        </div>  
+        <div class="mb-5">
+          <h5 class="fw-semibold">Master Degree in Molecular Biology, Università degli Studi della Campania "Luigi Vanvitelli" </h5>
+          <span class="text-muted">2017 – 24/07/2019 | Caserta, Italy</span>
+          <p>Title:  Identificazione di nuovi fattori trascrizionali che legano le regioni di controllo dell'imprinting.</p>
+          <p>Final grade: 110/110 cum laude</p>
+        </div>
+        <div class="mb-5">
+          <h5 class="fw-semibold">Benchelor Degree in Biological Sciences, Università degli Studi della Campania "Luigi Vanvitelli"</h5>
+          <span class="text-muted">September 2014 – 27/10/2017 | Caserta, Italy</span>
+          <p>Title: Effetti neuropatologici dell'abuso di alcol associati a carenza di Tiamina.</p>
+          <p>Final grade: 110/110 cum laude</p>
+        </div>
+      </div>
     </div>
   </section>
 
