Add the authors list

--- a/index.html
+++ b/index.html
@@ -945,7 +945,8 @@ Instructions:
       'Acurzio B',
       'Kelsey G',
       'Cerrato F',
-      'Del Bene M'
+      'Del Bene M',
+      'Matarazzo MR'
     ];
 
     // Co-first author papers (marked with * in publications)
